2006-11-14  arjan <arjan at yirdis dot nl>

        * setup.py: incremented version to 0.9.0

2006-10-30  arjan <arjan at yirdis dot nl>

        * gaphor/storage.py: some updates, time to get it working again.
        * gaphor/tests/test_storage.py: unit tests for storage.py
        * tests/*: moved several tests to gaphor/*/tests directory

2006-10-24  arjan <arjan at yirdis dot nl>

        * gaphor/diagram/association.py: Made direction and name drawing work.
        * gaphor/diagram/diagramline.py: make lines easier to select (fuzzyness)

2006-10-17  arjan <arjan at yirdis dot nl>

        * gaphor/adapters/editor.py: Added Association editor.

2006-09-29  arjan <arjan at yirdis dot nl>

        * gaphor/actions/placementactions.py: enabled Association
        * gaphor/diagram/association.py: partly works w/ gaphas
        * gaphor/diagram/items.py: added association

2006-09-27  arjan <arjan at yirdis dot nl>

        * gaphor/diagram/artifact.py: works now
        * gaphor/diagram/component.py: works now
        * gaphor/diagram/node.py: works now

2006-09-26  arjan <arjan at yirdis dot nl>

        * gaphor/UML/elementfactory.py: select() now returns an iterator
        * gaphor/actions/itemactions.py:
        * gaphor/actions/placementactions.py: placement for ExtensionItem
        * gaphor/actions/tests/test_placementactions.py: ... and tests
        * gaphor/adapters/connectors.py: Connector for ExtensionItem
        * gaphor/adapters/tests/test_connector.py:
        * gaphor/diagram/diagramitem.py: removed set_subject()
        * gaphor/diagram/extension.py: works
        * setup.py: added unittest

2006-09-20  arjan <arjan at yirdis dot nl>

        * utils/genUML.py: Removed.
        * gaphor/ui/objectinspector.py: Use classes for adaption, in stead
        of interfaces. Also removed interfaces from
        gaphor/diagram/interfaces.py.
        * gaphor/diagram/interfaces.py: cleaned up IDiagramElement interfaces.